# RAR

./: Cargo.toml  README.md  test-complex.rar  test-complex.txt  test-ppm-large.rar  test-ppm-large.txt  test-ppm.rar  test-ppm.txt  test_ppm.rs
assets/: large-test-fastest.rar  large-test-save.rar  test-encrypted-compressed.rar  test-encrypted-compressed.txt
src/: aes_reader.rs  archive_block.rs  compression.rs  end_block.rs  error.rs  extra_block.rs  extractor.rs  file_block.rs  file_writer.rs  head_block.rs  lib.rs  rar_reader.rs  sig_block.rs  util.rs  vint.rs
